--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,7 +12,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_map: ^8.0.0
+  flutter_map: 
+    git: https://github.com/enricostrijks/flutter_map_marker_popup
+    branch: groen_app
   flutter_map_marker_popup:
     git:
       url: https://github.com/enricostrijks/flutter_map_marker_popup.git
