--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,7 @@ dependencies:
     sdk: flutter
   flutter_map: 
     git: https://github.com/enricostrijks/flutter_map_marker_popup
-    branch: groen_app
+    ref: groen_app
   flutter_map_marker_popup:
     git:
       url: https://github.com/enricostrijks/flutter_map_marker_popup.git
