--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,7 +13,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_map: 
-    git: https://github.com/enricostrijks/flutter_map_marker_popup
+    git: https://github.com/enricostrijks/flutter_map.git
     ref: groen_app
   flutter_map_marker_popup:
     git:
