--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,8 +13,9 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_map: 
-    git: https://github.com/enricostrijks/flutter_map.git
-    ref: groen_app
+    git: 
+      url: https://github.com/enricostrijks/flutter_map.git
+      ref: groen_app
   flutter_map_marker_popup:
     git:
       url: https://github.com/enricostrijks/flutter_map_marker_popup.git
